syntax = "proto3";

package permission.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";
import "permission/service/v1/user_role.proto";

// 角色服务
service RoleService {
  // 查询角色列表
  rpc List (pagination.PagingRequest) returns (ListRoleResponse) {}

  // 统计角色数量
  rpc Count (pagination.PagingRequest) returns (CountRoleResponse) {}

  // 查询角色详情
  rpc Get (GetRoleRequest) returns (Role) {}

  // 创建角色
  rpc Create (CreateRoleRequest) returns (google.protobuf.Empty) {}
  // 批量创建角色
  rpc BatchCreate (BatchCreateRolesRequest) returns (BatchCreateRolesResponse) {}

  // 更新角色
  rpc Update (UpdateRoleRequest) returns (google.protobuf.Empty) {}

  // 删除角色
  rpc Delete (DeleteRoleRequest) returns (google.protobuf.Empty) {}


  // 从租户角色模板创建租户角色
  rpc CreateTenantRoleFromTemplate(CreateTenantRoleFromTemplateRequest) returns (Role) {}

  // 根据角色ID或角色值获取对应的权限点ID列表
  rpc ListPermissionIds(ListPermissionIdsRequest) returns (ListPermissionIdsResponse) {}

  // 根据角色ID列表获取角色值列表
  rpc ListRoleCodesByIds(ListRoleCodesByIdsRequest) returns (ListRoleCodesByIdsResponse) {}
  // 根据角色值列表获取角色ID列表
  rpc ListRoleIdsByCodes(ListRoleIdsByCodesRequest) returns (ListRoleIdsByCodesResponse) {}

  // 列出用户的角色ID列表
  rpc ListUserRoleIDs(ListUserRoleIDsRequest) returns (ListUserRoleIDsResponse);
  // 根据职位ID列表获取用户ID列表
  rpc ListUserIDsByRoleIDs(ListUserIDsByRoleIDsRequest) returns (ListUserIDsResponse) {}

  // 查询用户的角色
  rpc GetUserRoles (GetUserRolesRequest) returns (GetUserRolesResponse);

  // 给用户分配角色
  rpc AssignRolesToUser (AssignRolesToUserRequest) returns (google.protobuf.Empty);
  // 解除用户与角色关系 - 从用户上移除指定角色（或全部）
  rpc UnassignRolesFromUser (UnassignRolesFromUserRequest) returns (UnassignRolesFromUserResponse) {}

  // 给角色分配用户
  rpc AssignUsersToRole (AssignUsersToRoleRequest) returns (google.protobuf.Empty);
  // 解除角色与用户关系 - 从角色上移除指定用户（或全部）
  rpc UnassignUsersFromRole (UnassignUsersFromRoleRequest) returns (UnassignUsersFromRoleResponse) {}
}

// 角色
message Role {
  // 角色状态
  enum Status {
    OFF = 0;         // 禁用
    ON = 1;          // 启用
  }

  // 角色类型
  enum Type {
    SYSTEM = 0;     // 系统内置角色
    TEMPLATE = 1;   // 角色模板
    TENANT = 2;     // 租户角色
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "角色ID"}
  ];  // 角色ID

  optional string name = 2 [
    json_name = "name",
    (gnostic.openapi.v3.property) = {description: "角色名称"}
  ];  // 角色名称

  optional string code = 3 [
    json_name = "code",
    (gnostic.openapi.v3.property) = {
      description: "角色标识码"
      example: {yaml: "platform:admin, tenant:admin1"}
    }
  ];  // 角色标识码（如：ADMIN, VIEWER）

  optional uint32 sort_order = 4 [
    json_name = "sortOrder",
    (gnostic.openapi.v3.property) = {description: "排序顺序，值越小越靠前"}
  ];  // 排序顺序，值越小越靠前

  optional Status status = 5 [
    json_name = "status",
    (gnostic.openapi.v3.property) = {description: "状态"}
  ];  // 状态

  optional string description = 6 [
    json_name = "description",
    (gnostic.openapi.v3.property) = {description: "描述"}
  ];  // 描述

  optional bool is_protected = 7 [
    json_name = "isProtected",
    (gnostic.openapi.v3.property) = {description: "受保护角色，仅平台管理员可修改"}
  ];  // 受保护角色，仅平台管理员可修改

  optional Type type = 8 [
    json_name = "type",
    (gnostic.openapi.v3.property) = {description: "角色类型"}
  ];  // 角色类型

  repeated uint32 permissions = 10 [
    json_name = "permissions",
    (gnostic.openapi.v3.property) = {description: "绑定的权限点ID列表"}
  ]; // 绑定的权限点ID列表

  optional uint32 tenant_id = 40 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID，0代表系统全局角色"}
  ];  // 租户ID，0代表系统全局角色
  optional string tenant_name = 41 [
    json_name = "tenantName",
    (gnostic.openapi.v3.property) = {description: "租户名称"}
  ];  // 租户名称

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者用户ID"}]; // 创建者用户ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者用户ID"}]; // 更新者用户ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}


// 角色权限覆盖
message RoleOverride {
  // 权限点覆盖
  message PermissionDelta {
    repeated string added_permissions = 1 [
      json_name = "addedPermissions",
      (gnostic.openapi.v3.property) = {description: "租户额外增加的权限"}
    ]; // 租户额外增加的权限

    repeated string removed_permissions = 2 [
      json_name = "removedPermissions",
      (gnostic.openapi.v3.property) = {description: "租户明确禁用的权限（即便模板有，也禁用）"}
    ]; // 租户明确禁用的权限（即便模板有，也禁用）
  }

  PermissionDelta permissions = 1; // 权限点覆盖

  // 基础字段修改（如果为空则沿用模板）
  optional string display_name = 2 [
    json_name = "displayName",
    (gnostic.openapi.v3.property) = {description: "显示名称"}
  ]; // 显示名称

  optional string description = 3 [
    json_name = "description",
    (gnostic.openapi.v3.property) = {description: "描述"}
  ]; // 描述

  // 扩展配置
  map<string, string> extended_settings = 4 [
    json_name = "extendedSettings",
    (gnostic.openapi.v3.property) = {description: "扩展配置，存储如 ui_color: #FF0000"}
  ]; // 存储如 "ui_color": "#FF0000"

  // 策略覆盖
  message SecurityPolicy {
    bool force_mfa = 1 [
      json_name = "forceMfa",
      (gnostic.openapi.v3.property) = {description: "强制多因素认证"}
    ]; // 强制多因素认证

    repeated string ip_allow_list = 2 [
      json_name = "ipAllowList",
      (gnostic.openapi.v3.property) = {description: "IP 允许列表"}
    ]; // IP 允许列表
  }

  SecurityPolicy security_policy = 5 [
    json_name = "securityPolicy",
    (gnostic.openapi.v3.property) = {description: "安全策略覆盖"}
  ]; // 安全策略覆盖
}

// 角色元数据
message RoleMetadata {
  // 同步策略
  enum SyncPolicy {
    AUTO = 0;        // 自动同步
    MANUAL = 1;      // 手动同步
    BLOCKED = 2;     // 阻止同步
  }

  // 作用域
  enum Scope {
    PLATFORM = 0;     // 平台级
    TENANT = 1;       // 租户级
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "角色元数据ID"}
  ];  // 角色元数据ID

  optional uint32 role_id = 2 [
    json_name = "roleId",
    (gnostic.openapi.v3.property) = {description: "角色ID"}
  ];  // 角色ID

  optional bool is_template = 3 [
    json_name = "isTemplate",
    (gnostic.openapi.v3.property) = {description: "是否是模版"}
  ];  // 是否是模版

  optional string template_for = 4 [
    json_name = "templateFor",
    (gnostic.openapi.v3.property) = {description: "模板适用对象"}
  ];  // 模板适用对象

  optional int32 template_version = 5 [
    json_name = "templateVersion",
    (gnostic.openapi.v3.property) = {description: "模板版本号"}
  ];  // 模板版本号

  optional int32 last_synced_version = 6 [
    json_name = "lastSyncedVersion",
    (gnostic.openapi.v3.property) = {description: "上次同步的版本号"}
  ];  // 上次同步的版本号

  optional google.protobuf.Timestamp last_synced_at = 7 [
    json_name = "lastSyncedAt",
    (gnostic.openapi.v3.property) = {description: "最后同步时间"}
  ];  // 最后同步时间

  optional SyncPolicy sync_policy = 8 [
    json_name = "syncPolicy",
    (gnostic.openapi.v3.property) = {description: "同步策略"}
  ];  // 同步策略

  optional Scope scope = 9 [
    json_name = "scope",
    (gnostic.openapi.v3.property) = {description: "作用域"}
  ];  // 作用域

  RoleOverride custom_overrides = 10 [
    json_name = "customOverrides",
    (gnostic.openapi.v3.property) = {description: "租户自定义覆盖项"}
  ];  // 租户自定义覆盖项

  optional uint32 tenant_id = 20 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID，0代表系统全局角色"}
  ];  // 租户ID，0代表系统全局角色

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者用户ID"}]; // 创建者用户ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者用户ID"}]; // 更新者用户ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}


// 角色列表 - 答复
message ListRoleResponse {
  repeated Role items = 1;
  uint64 total = 2;
}

// 角色数据 - 请求
message GetRoleRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID

    string name = 2 [
      (gnostic.openapi.v3.property) = {description: "名称", read_only: true},
      json_name = "name"
    ]; // 名称

    string code = 3 [
      (gnostic.openapi.v3.property) = {description: "唯一编码", read_only: true},
      json_name = "code"
    ]; // 唯一编码
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

// 创建角色 - 请求
message CreateRoleRequest {
  Role data = 1;
}

// 更新角色 - 请求
message UpdateRoleRequest {
  uint32 id = 1;

  Role data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "要更新的字段列表",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // 要更新的字段列表

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。"},
    json_name = "allowMissing"
  ]; // 如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。
}

// 删除角色 - 请求
message DeleteRoleRequest {
  oneof delete_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "角色ID", read_only: true},
      json_name = "id"
    ]; // 角色ID

    string code = 2 [
      (gnostic.openapi.v3.property) = {description: "编码", read_only: true},
      json_name = "code"
    ]; // 编码

    uint32 tenant_id = 3 [
      (gnostic.openapi.v3.property) = {description: "租户ID", read_only: true},
      json_name = "tenantId"
    ]; // 租户ID
  }
}

message BatchCreateRolesRequest {
  repeated Role items = 1;
}
message BatchCreateRolesResponse {
  repeated int32 created_ids = 1 [
    json_name = "createdIds",
    (gnostic.openapi.v3.property) = {
      description: "创建成功的角色ID列表"
    }
  ]; // 创建成功的角色ID列表
}

message GetRoleCodesByRoleIdsRequest {
  repeated uint32 role_ids = 1 [json_name = "roleIds", (gnostic.openapi.v3.property) = {description: "角色ID列表"}];
}
message GetRoleCodesByRoleIdsResponse {
  repeated string role_codes = 1 [json_name = "roleCodes", (gnostic.openapi.v3.property) = {description: "角色值列表"}];
}

message GetRolesByRoleCodesRequest {
  repeated string role_codes = 1 [json_name = "roleCodes", (gnostic.openapi.v3.property) = {description: "角色值列表"}];

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

message GetRolesByRoleIdsRequest {
  repeated uint32 role_ids = 1 [json_name = "roleIds", (gnostic.openapi.v3.property) = {description: "角色ID列表"}];

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

message CountRoleResponse {
  uint64 count = 1;
}

message ListRoleCodesByIdsRequest {
  repeated uint32 role_ids = 1 [json_name = "roleIds", (gnostic.openapi.v3.property) = {description: "角色ID列表"}];
}
message ListRoleCodesByIdsResponse {
  repeated string role_codes = 1 [json_name = "roleCodes", (gnostic.openapi.v3.property) = {description: "角色值列表"}];
}

message ListRoleIdsByCodesRequest {
  repeated string role_codes = 1 [json_name = "roleCodes", (gnostic.openapi.v3.property) = {description: "角色值列表"}];
}
message ListRoleIdsByCodesResponse {
  repeated uint32 role_ids = 1 [json_name = "roleIds", (gnostic.openapi.v3.property) = {description: "角色ID列表"}];
}

message ListPermissionIdsRequest {
  oneof query_by {
    uint32 role_id = 1 [
      (gnostic.openapi.v3.property) = {description: "角色ID"},
      json_name = "roleId"
    ]; // 角色ID

    string role_code = 2 [
      (gnostic.openapi.v3.property) = {description: "角色值"},
      json_name = "roleCode"
    ]; // 角色值

    uint32 user_id = 3 [
      (gnostic.openapi.v3.property) = {description: "用户ID"},
      json_name = "userId"
    ]; // 用户ID
  }

  repeated uint32 role_ids = 10 [
    (gnostic.openapi.v3.property) = {description: "角色ID"},
    json_name = "roleIds"
  ]; // 角色ID

  repeated string role_codes = 11 [
    (gnostic.openapi.v3.property) = {description: "角色值"},
    json_name = "roleCodes"
  ]; // 角色值
}
message ListPermissionIdsResponse {
  repeated uint32 permission_ids = 1 [
    json_name = "permissionIds",
    (gnostic.openapi.v3.property) = {
      description: "权限点ID列表"
    }
  ]; // 权限点ID列表
}

// 从租户角色模板创建租户角色 - 请求
message CreateTenantRoleFromTemplateRequest {
  uint32 tenant_id = 1 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID"}
  ];  // 租户ID

  uint32 operator_id = 2 [
    json_name = "operatorId",
    (gnostic.openapi.v3.property) = {description: "操作者ID"}
  ]; // 操作者ID
}

message AssignRolesToUserRequest {
  uint32 user_id = 1 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = {description: "用户ID"}
  ]; // 用户ID

  repeated uint32 role_ids = 2 [
    json_name = "roleIds",
    (gnostic.openapi.v3.property) = {description: "角色ID列表"}
  ]; // 角色ID列表

  uint32 tenant_id = 3 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID"}
  ]; // 租户ID

  uint32 operator_id = 4 [
    json_name = "operatorId",
    (gnostic.openapi.v3.property) = {description: "操作者ID"}
  ]; // 操作者ID

  string reason = 5 [
    json_name = "reason",
    (gnostic.openapi.v3.property) = {description: "变更原因"}
  ]; // 变更原因
}

message AssignUsersToRoleRequest {
  uint32 role_id = 1 [
    json_name = "roleId",
    (gnostic.openapi.v3.property) = {description: "目标角色ID"}
  ]; // 目标角色ID

  repeated uint32 user_ids = 2 [
    json_name = "userIds",
    (gnostic.openapi.v3.property) = {description: "用户ID列表"}
  ]; // 全量替换该角色的用户列表

  uint32 tenant_id = 3 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID"}
  ]; // 租户ID

  uint32 operator_id = 4 [
    json_name = "operatorId",
    (gnostic.openapi.v3.property) = {description: "操作者ID"}
  ]; // 操作者ID

  string reason = 5 [
    json_name = "reason",
    (gnostic.openapi.v3.property) = {description: "变更原因"}
  ]; // 变更原因
}

// 查询用户角色请求
message GetUserRolesRequest {
  uint32 user_id = 1 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = {description: "用户ID"}
  ]; // 用户ID

  uint32 tenant_id = 2 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID"}
  ]; // 租户ID

  bool include_expired = 3 [
    json_name = "includeExpired",
    (gnostic.openapi.v3.property) = {description: "是否包含已过期角色"}
  ]; // 是否包含已过期角色
}

// 查询用户角色响应
message GetUserRolesResponse {
  repeated UserRole bindings = 1; // 绑定详情（含有效期）
}

message ListUserRoleIDsRequest {
  oneof query_by {
    uint32 user_id = 1 [
      (gnostic.openapi.v3.property) = {description: "用户ID", read_only: true},
      json_name = "userId"
    ]; // 用户ID

    string username = 2 [
      (gnostic.openapi.v3.property) = {description: "用户登录名", read_only: true},
      json_name = "username"
    ]; // 用户登录名
  }
}
message ListUserRoleIDsResponse {
  repeated uint32 role_ids = 1 [
    json_name = "roleIds",
    (gnostic.openapi.v3.property) = {
      description: "角色ID列表"
    }
  ]; // 角色ID列表
}

message ListUserIDsByRoleIDsRequest {
  repeated uint32 role_ids = 1 [json_name = "roleIds", (gnostic.openapi.v3.property) = {description: "角色ID列表"}];

  optional bool exclude_expired = 2 [
    json_name = "excludeExpired",
    (gnostic.openapi.v3.property) = {
      description: "是否排除过期用户，默认值：false"
    }
  ]; // 是否排除过期用户，默认值：false
}

message ListUserIDsResponse {
  repeated uint32 user_ids = 1 [
    json_name = "userIds",
    (gnostic.openapi.v3.property) = {description: "用户ID列表"}
  ]; // 用户ID列表
}

message UnassignRolesFromUserRequest {
  uint32 user_id = 1 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = {description: "目标用户ID"}
  ];

  repeated uint32 role_ids = 2 [
    json_name = "roleIds",
    (gnostic.openapi.v3.property) = {description: "要移除的角色ID列表"}
  ];

  uint32 tenant_id = 3 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID，0 表示全局"}
  ];

  uint32 operator_id = 4 [
    json_name = "operatorId",
    (gnostic.openapi.v3.property) = {description: "操作者ID，用于审计"}
  ];

  optional string reason = 5 [
    json_name = "reason",
    (gnostic.openapi.v3.property) = {description: "变更原因（可选）"}
  ]; // 变更原因（可选）

  bool remove_all = 6 [
    json_name = "removeAll",
    (gnostic.openapi.v3.property) = {description: "如果为 true，忽略 role_ids，移除该用户在 tenant 下的所有角色"}
  ]; // 如果为 true，忽略 role_ids，移除该用户在 tenant 下的所有角色

  bool strict = 7 [
    json_name = "strict",
    (gnostic.openapi.v3.property) = {description: "严格模式：如果关系不存在则返回错误"}
  ]; // 严格模式：如果关系不存在则返回错误
}
message UnassignRolesFromUserResponse {
  repeated uint32 removed_role_ids = 1 [
    json_name = "removedRoleIds",
    (gnostic.openapi.v3.property) = {description: "成功被移除的角色ID列表（可能为空）"}
  ];

  repeated uint32 not_found_role_ids = 2 [
    json_name = "notFoundRoleIds",
    (gnostic.openapi.v3.property) = {description: "部分失败时返回每个失败项的详细信息（如 DB 锁、权限不足等）"}
  ]; // 部分失败时返回每个失败项的详细信息（如 DB 锁、权限不足等）
}

message UnassignUsersFromRoleRequest {
  uint32 role_id = 1 [
    json_name = "roleId",
    (gnostic.openapi.v3.property) = {description: "目标角色ID"}
  ]; // 目标角色ID

  repeated uint32 user_ids = 2 [
    json_name = "userIds",
    (gnostic.openapi.v3.property) = {description: "要移除的用户ID列表"}
  ]; // 要移除的用户ID列表

  uint32 tenant_id = 3 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID，0 表示全局"}
  ];

  uint32 operator_id = 4 [
    json_name = "operatorId",
    (gnostic.openapi.v3.property) = {description: "操作者ID，用于审计"}
  ];

  optional string reason = 5 [
    json_name = "reason",
    (gnostic.openapi.v3.property) = {description: "变更原因（可选）"}
  ]; // 变更原因（可选）

  bool remove_all = 6 [
    json_name = "removeAll",
    (gnostic.openapi.v3.property) = {description: "如果为 true，忽略 role_ids，移除该用户在 tenant 下的所有角色"}
  ]; // 如果为 true，忽略 role_ids，移除该用户在 tenant 下的所有角色

  bool strict = 7 [
    json_name = "strict",
    (gnostic.openapi.v3.property) = {description: "严格模式：如果关系不存在则返回错误"}
  ]; // 严格模式：如果关系不存在则返回错误
}
message UnassignUsersFromRoleResponse {
  repeated uint32 removed_user_ids = 1 [
    json_name = "removedUserIds",
    (gnostic.openapi.v3.property) = {description: "成功被移除的用户ID列表（可能为空）"}
  ]; // 成功被移除的用户ID列表（可能为空）

  repeated uint32 not_found_user_ids = 2 [
    json_name = "notFoundUserIds",
    (gnostic.openapi.v3.property) = {description: "部分失败时返回每个失败项的详细信息（如 DB 锁、权限不足等）"}
  ]; // 部分失败时返回每个失败项的详细信息（如 DB 锁、权限不足等）
}
